--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <title>Home</title>
-    <link href="style/bootstrap520/css/bootstrap.css" rel="stylesheet">
-    <link href="style/style.css" type="text/css" rel="stylesheet">
-    <link rel="stylesheet" href="style/font.css" type="text/css">
-    <link rel="stylesheet" href="style/fontawesome611/css/all.css" type="text/css">
+        <title>Home</title>
+        <link href="style/bootstrap520/css/bootstrap.css" rel="stylesheet" />
+        <link href="style/style.css" type="text/css" rel="stylesheet" />
+        <link rel="stylesheet" href="style/font.css" type="text/css" />
+        <link rel="stylesheet" href="style/fontawesome611/css/all.css" type="text/css" />
     </head>
     <body>
         <header>
-            <nav> 
+            <nav>
                 <div class="container">
                     <div class="row anav">
                         <div class="anav-logo col-2">
@@ -17,19 +17,19 @@
                         </div>
                         <div class="anav-bar offset-5 col-5">
                             <div class="anav-bar-list">
-                            <a>Profile</a>
+                                <a>Profile</a>
                             </div>
                             <div class="anav-bar-list">
-                            <a>News</a>
+                                <a>News</a>
                             </div>
                             <div class="anav-bar-list">
-                            <a>About</a>
+                                <a>About</a>
                             </div>
                             <div class="anav-bar-list">
-                            <a>Project</a>
+                                <a>Project</a>
                             </div>
                             <div class="anav-bar-list">
-                            <a>Contact</a>
+                                <a>Contact</a>
                             </div>
                         </div>
                     </div>
@@ -43,12 +43,14 @@
                         <div class="ahero-box">
                             <div class="ahero-box-text">
                                 <p class="ahero-box-text-title">I'm Malana, Yahh</p>
-                                <p class="ahero-box-text-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam sequi repellendus aliquam quaerat placeat aperiam adipisci aliquid pariatur animi, suscipit quas modi dolorem, fugit neque incidunt officia odit optio nobis?
+                                <p class="ahero-box-text-text">
+                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam sequi repellendus aliquam quaerat placeat aperiam adipisci aliquid pariatur animi, suscipit quas modi dolorem, fugit neque incidunt officia odit
+                                    optio nobis?
                                 </p>
                             </div>
                             <div class="ahero-box-image">
                                 <div class="ahero-box-image-picture">
-                                    <img src="style/img/Man.jpg" alt="">
+                                    <img src="style/img/Man.jpg" alt="" />
                                 </div>
                             </div>
                         </div>
@@ -61,15 +63,14 @@
                 </div>
                 <div class="row awork">
                     <div class="awork-text g-0">
-                        <p class="awork-text-title">
-                            A Web
-                        </p>
+                        <p class="awork-text-title">A Web</p>
                         <p class="awork-text-text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur ut quas consequuntur doloremque rerum eaque, recusandae voluptate sit minus libero perferendis reprehenderit ab praesentium ducimus. Sunt sapiente laudantium impedit tempora.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur ut quas consequuntur doloremque rerum eaque, recusandae voluptate sit minus libero perferendis reprehenderit ab praesentium ducimus. Sunt sapiente
+                            laudantium impedit tempora.
                         </p>
                     </div>
                     <div class="awork-picture g-0">
-                        <img src="style/img/pencil.jpg" alt="">
+                        <img src="style/img/pencil.jpg" alt="" />
                     </div>
                 </div>
             </section>
